--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "3.9.1",
     "gulp-better-rollup": "3.1.0",
     "gulp-csso": "3.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "3.2.0",
     "gulp-mocha": "5.0.0",
     "gulp-plumber": "1.1.0",
